<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		google_pixel_2___1
	 *	@date 		Wednesday 01st of November 2023 05:39:08 PM
	 *	@title 		Page 1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/google_pixel_2___1" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >



			<RelativeLayout android:id="@+id/page_google_pixel_2___1_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View
					android:id="@+id/_bg__google_pixel_2___1_ek2"
					android:layout_width="1080px"
					android:layout_height="2160px"
					android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:background="@color/purple_200" />


				<RelativeLayout android:id="@+id/text_field_outlined"
					android:layout_marginTop="286dp"
					android:layout_marginStart="38dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/_bg__text_field_outlined_ek1"
						android:background="@drawable/_bg__text_field_outlined_ek1_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="312dp"
						android:layout_height="56dp" />

					<View   android:id="@+id/outline"
						android:background="@drawable/outline_shape"
						 android:layout_marginStart="-1dp"
						android:layout_marginTop="-1dp"
						android:layout_width="312dp"
						android:layout_height="56dp" />


					<RelativeLayout android:id="@+id/account"
						android:layout_marginTop="16dp"
						android:layout_marginStart="272dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<View   android:id="@+id/_bg__account_ek1"
							android:background="@drawable/_bg__account_ek1_shape"
							 android:alpha="0.5"
							 android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="24dp"
							android:layout_height="24dp" />

						<ImageView android:id="@+id/vector"
							android:src="@drawable/vector"
							android:contentDescription="vector"
							 android:layout_marginStart="2dp"
							android:layout_marginTop="2dp"
							android:layout_width="20dp"
							android:layout_height="20dp" />

					</RelativeLayout>

					<EditText
						android:id="@+id/placeholder_text"
						android:layout_width="244dp"
						android:layout_height="wrap_content"
						android:layout_marginLeft="16dp"
						android:layout_marginTop="4dp"
						android:text="@string/placeholder_text_string"
						android:textColor="@color/gray"
						android:textSize="16sp" />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/text_field_outlined_ek2"
					android:layout_marginTop="366dp"
					android:layout_marginStart="38dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/_bg__text_field_outlined_ek3"
						android:background="@drawable/_bg__text_field_outlined_ek3_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="312dp"
						android:layout_height="48dp" />

					<View   android:id="@+id/outline_ek1"
						android:background="@drawable/outline_ek1_shape"
						 android:layout_marginStart="-1dp"
						android:layout_marginTop="-1dp"
						android:layout_width="312dp"
						android:layout_height="48dp" />

					<EditText
						android:id="@+id/placeholder_text_ek1"
						android:layout_width="244dp"
						android:layout_height="wrap_content"
						android:layout_marginLeft="16dp"
						android:layout_marginTop="4dp"
						android:text="@string/placeholder_text_ek1_string"
						android:textColor="@color/gray"
						android:textSize="16sp" />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/button_rounded_5_lead_true_hover"
					android:layout_marginTop="438dp"
					android:layout_marginStart="94dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View
						android:id="@+id/_bg__button_rounded_5_lead_true_hover"
						android:layout_width="200dp"
						android:layout_height="62dp"
						android:layout_marginStart="-1dp"
						android:layout_marginTop="-1dp"
						android:background="@drawable/_bg__button_rounded_5_lead_true_hover_shape"
						/>

					<TextView android:id="@+id/text"
						android:textStyle="bold"
						android:textSize="20sp"
						android:textColor="@color/white"
						android:layout_marginLeft="70.5dp"
						android:layout_marginTop="16dp"
						android:layout_width="76dp"
						android:layout_height="36dp"
						android:text="@string/text_string"
						 />

				</RelativeLayout>

				<TextView android:id="@+id/title"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="34sp"
					android:textColor="@color/black"
					android:layout_marginLeft="32dp"
					android:layout_marginTop="214dp"
					android:layout_width="320.4dp"
					android:layout_height="58.4dp"
					android:text="@string/title_string"
					 />

				<TextView android:id="@+id/caption"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="12sp"
					android:textColor="@color/gray"
					android:layout_marginLeft="42dp"
					android:layout_marginTop="750dp"
					android:layout_width="306.2dp"
					android:layout_height="19.2dp"
					android:text="@string/caption_string"
					 />


			</RelativeLayout>
		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>