<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		google_pixel_2___8
	 *	@date 		Wednesday 01st of November 2023 05:50:43 PM
	 *	@title 		Page 1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/google_pixel_2___8" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >



			<RelativeLayout android:id="@+id/page_google_pixel_2___8_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__google_pixel_2___8_ek2"
					android:background="@drawable/_bg__google_pixel_2___8_ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="1080px"
					android:layout_height="2160px" />

				<TextView android:id="@+id/title"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="34sp"
					android:textColor="@color/title_color"
					android:layout_marginLeft="37dp"
					android:layout_marginTop="20dp"
					android:layout_width="320.4dp"
					android:layout_height="58.4dp"
					android:text="@string/title_result"
					 />

				<ImageView android:id="@+id/undo"
					android:src="@drawable/undo"
					android:contentDescription="undo"
					 android:layout_marginStart="10dp"
					android:layout_marginTop="19dp"
					android:layout_width="50dp"
					android:layout_height="50dp" />


				<RelativeLayout android:id="@+id/button_rounded_5_lead_true_hover"
					android:layout_marginTop="683dp"
					android:layout_marginStart="49dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/_bg__button_rounded_5_lead_true_hover_ek1"
						android:background="@drawable/_bg__button_rounded_5_lead_true_hover_shape"
						 android:layout_marginStart="-1dp"
						android:layout_marginTop="-1dp"
						android:layout_width="300dp"
						android:layout_height="62dp" />

					<TextView
						android:id="@+id/text"
						android:layout_width="290dp"
						android:layout_height="62dp"
						android:layout_marginLeft="5dp"
						android:layout_marginTop="0dp"
						android:gravity="center"
						android:text="@string/result"
						android:textColor="@color/white"
						android:textSize="20sp"
						android:textStyle="bold" />

				</RelativeLayout>

				<TextView
					android:id="@+id/caption"
					android:layout_width="326dp"
					android:layout_height="194dp"
					android:layout_gravity="center_horizontal|center"
					android:layout_marginLeft="26dp"
					android:layout_marginTop="107dp"
					android:gravity="center"
					android:text="@string/test_result"
					android:textColor="@color/title_color"
					android:textSize="32sp" />

				<ImageView android:id="@+id/image_3"
					android:src="@drawable/image_3"
					android:contentDescription="image_3"
					 android:layout_marginStart="51dp"
					android:layout_marginTop="290dp"
					android:layout_width="295dp"
					android:layout_height="363dp" />

			</RelativeLayout>
		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>